功能改为面试题刷题，长期记忆实现修改